@@ -1,4 +1,6 @@
 3.99.99
+	ios.pm: add RunCommandComment() for cisco-ncs type
+
 	rancid.types.base: add cisco-ncs for ios-xe ncs devices
 
 	iosxr.pm: filter "drbg_instantiate failed" - 7.1.2 CSCvu27946
